# toxzone

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  database.py  main.py  schemas.py
backend/src/api/: __init__.py  calculations.py  chemicals.py  facilities.py  scenarios.py
backend/src/core/: __init__.py  dispersion.py  epz_calculator.py  population_estimator.py  source_terms.py
backend/src/models/: __init__.py  chemical.py  facility.py  result.py  scenario.py
backend/tests/: conftest.py  test_chemical_service.py  test_dispersion.py  test_epz_calculator.py  test_facility.py
data/: seed_chemicals.py
frontend/src/: App.css  App.tsx
