[tool.poetry]
name = "toxzone-backend"
version = "0.1.0"
description = "ToxZone Backend - Emergency Exposure Boundary Planner"
authors = ["Arie Nugraha <arienug20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.1"
numpy = "^1.26.0"
scipy = "^1.11.0"
pandas = "^2.2.0"
geojson = "^3.1.0"
simplekml = "^1.3.6"
weasyprint = "^60.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"